[package]
name = "data-exporter"
version = "0.3.1"
edition = "2021"

[dependencies]
axum = "0.5"
clap = { version = "3.2", features = ["derive"] }
futures = "0.3"
jq-rs = { version = "0.4.1", features = ["bundled"] }
log = "0.4"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
regex = "1.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
tracing-logfmt = "0.1"
tracing-subscriber = "0.3"
