[package]
name = "data-exporter"
version = "0.4.2"
edition = "2021"
license-file = "LICENCE"

[dependencies]
axum = "0.6"
bytes = "1.4"
clap = { version = "4.1", features = ["derive"] }
futures = "0.3"
jq-rs = { version = "0.4.1", features = ["bundled"] }
log = "0.4"
metrics = "0.20"
metrics-exporter-prometheus = "0.11"
regex = "1.7"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1.26", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-logfmt = "0.3"
tracing-subscriber = "0.3"
